--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^3.10.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-player": "^0.24.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
