--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tav-murphy-portfolio",
   "version": "1.0.0",
   "description": "Vimeo-based portfolio",
+  "engines": {
+    "node": "6.11.1"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
@@ -29,6 +32,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-preset-stage-1": "^6.1.18",
     "express": "^4.16.2",
     "lodash": "^3.10.1",
