--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.16.2",
     "lodash": "^3.10.1",
     "react": "^15.6.1",
+    "react-animate-height": "^0.10.8",
     "react-dom": "^15.6.1",
     "react-player": "^0.24.5",
     "react-redux": "^5.0.6",
